--- a/frontend/src/blocks/modal/__close-button/modal__close-button.css
+++ b/frontend/src/blocks/modal/__close-button/modal__close-button.css
@@ -13,7 +13,7 @@
 }
 
 .modal__close-button:hover {
-    opacity: 60%;
+    opacity: 0.6;
     transition: opacity ease .3s;
     cursor: pointer;
 }
