--- a/frontend/src/blocks/modal/__save-button/modal__save-button.css
+++ b/frontend/src/blocks/modal/__save-button/modal__save-button.css
@@ -14,7 +14,7 @@
 }
 
 .modal__save-button:hover {
-    opacity: 60%;
+    opacity: 0.6;
     cursor: pointer;
     transition: opacity ease .3s;
 }
