--- a/frontend/src/blocks/profile/__add-button/profile__add-button.css
+++ b/frontend/src/blocks/profile/__add-button/profile__add-button.css
@@ -11,7 +11,7 @@
 }
 
 .profile__add-button:hover {
-    opacity: 60%;
+    opacity: 0.6;
     cursor: pointer;
     transition: opacity ease .3s;
 }
