--- a/frontend/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/frontend/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,7 +13,7 @@
 }
 
 .profile__edit-button:hover {
-    opacity: 60%;
+    opacity: 0.6;
     cursor: pointer;
     transition: opacity ease .3s;
 }
