--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,4 @@
 @import url(./blocks/modal/_is-open/modal_is-open.css);
 @import url(./blocks/authorization/authorization.css);
 @import url(./blocks/header/__user-container-mobile/__user-container-mobile_is-open/header__user-container-mobile_is-open.css);
+@import url(./blocks/content/content.css);
