style: скоррктировать отображение кнопок и ссылок при наведенни мыши

--- a/frontend/src/blocks/authorization/__link-to-signin/authorization__link-to-signin.css
+++ b/frontend/src/blocks/authorization/__link-to-signin/authorization__link-to-signin.css
@@ -6,3 +6,8 @@
     color: #fff;
     text-decoration: none;
 }
+
+.authorization__link-to-signin:hover {
+    opacity: 0.6; 
+    transition: opacity ease .3s;
+}
